# leasing-agent

./: LICENSE  README.md
backend/: .env.template  Makefile  alembic.ini  manage.py  pyproject.toml  run_tests.py
backend/app/: config.py  main.py
backend/app/api/v1/: chat.py
backend/app/core/: logging.py
backend/app/db/: database.py
backend/app/db/repository/: __init__.py  base.py  community.py  conversation.py  lead.py  message.py  pet_policy.py  tool_call.py  tour_slot.py  unit.py  unit_pricing.py
backend/app/models/: __init__.py
backend/app/services/: leasing.py  llm.py  tools.py
backend/migrations/: env.py
backend/migrations/versions/: 6f11ec5e283e_initial_tables.py  728455e2e369_nanoid.py  db9a42a5d8e7_tool_call_tbl.py  e755caf2a430_new_action_type.py
backend/seeds/: base.py  seeds.py
backend/tests/: conftest.py  test_chat_api.py  test_llm_service.py  test_tools_service.py
frontend/: package-lock.json
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/components/: chat.tsx
